metadata/root/main/default/objects/User/fields/long_text_2__c.field-meta.xml
<CustomField>
    <fullName>long_text_2__c</fullName>
    <label>long text 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>