metadata/root/main/default/objects/User/fields/long_text_4__c.field-meta.xml
<CustomField>
    <fullName>long_text_4__c</fullName>
    <label>long text 4</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>