metadata/root/main/default/objects/User/fields/text_area_long_1__c.field-meta.xml
<CustomField>
    <fullName>text_area_long_1__c</fullName>
    <label>text area long 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>